roles/commen/templates/iptables
# sample configuration for iptables service
# you can edit this manually or use system-config-firewall
# please do not ask us to add additional ports/services to this default configuration
*filter
#:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p udp --dport 8472 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp --dport 16509 -j ACCEPT -m comment --comment "libvirtd"
-A INPUT -p tcp -m multiport --dports 5900:5999 -m comment --comment "ACCEPT VNC Port only by Controller Node" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 5900:5999 -j REJECT --reject-with icmp-port-unreachable
#-A INPUT -p tcp -m multiport --ports 5900:6100 -m comment --comment "vnc ports" -j ACCEPT
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 6080 -j ACCEPT
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 6081 -j ACCEPT
#-A INPUT -p tcp  -m multiport --dport 5900:6100 -j ACCEPT -m comment --comment "vncproxy"
#-A INPUT -p tcp -m tcp --dport 8472 -m comment --comment vxlan -j ACCEPT
COMMIT
